--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -15,12 +15,12 @@ a{
 	display: inline-block;
 }
 
-.lock{
+.--lock{
 	overflow: hidden;
 }
 
-.contacts__form-input.error,
-.contacts__form-area.error{
+.contacts__form-input.--error,
+.contacts__form-area.--error{
 	border: 1px solid rgba(red, .4);
 }
 
