--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -171,6 +171,10 @@
   .menu__list-item + .menu__list-item{
     margin-left: 0;
   }
+  .header__btn{
+    font-size: 16px;
+    padding: 9px 41px;
+  }
   .header__social{
     margin-left: auto;
   }
@@ -227,9 +231,6 @@
   .header__how-item--mark--center::before{
     top: -11px;
   }
-  .header__how{
-    margin-bottom: 100px;
-  }
   .title{
     margin-bottom: 40px;
   }
@@ -266,6 +267,9 @@
   .header__social-link{
     margin-right: 20px;
   }
+  .header__how-subtitle{
+    text-align: center;
+  }
   .menu-btn{
     top: 9px;
     left: 5px;
@@ -274,7 +278,6 @@
     background-position: 0;
   }
   .header__btn{
-    width: 280px;
     margin: 0 auto;
     display: block;
   }
@@ -293,6 +296,9 @@
   .benefits__box-img{
     width: 100px;
     height: 100px;
+  }
+  .quiz__box-header{
+    padding: 40px 20px;
   }
 }
 
@@ -334,7 +340,7 @@
     font-size: 18px;
   }
   .header__title{
-    font-size: 24px;
+    font-size: 26px;
     line-height: 30px;
   }
   .header__how-list{
