optimization(webp, SEO) and bugs fix)

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -459,7 +459,7 @@
   display: none;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   z-index: 20;
   &--open{
     display: flex;
